stop the jumping

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -336,6 +336,7 @@ blockquote {
   #deepscatter {
     margin: 25px;
     position: relative;
+    min-height: 2000px;
   }
 }
 /* footer */
